# Zephyr-MQTT

mqtt_publisher/: prj.conf
mqtt_publisher/boards/: esp32.conf
mqtt_publisher/src/: config.h  main.c
mqtt_publisher_tls/: CMakeLists.txt  prj.conf
mqtt_publisher_tls/boards/: esp32.conf
mqtt_publisher_tls/src/: config.h  main.c
